# SMIG

./: .gitignore  CLAUDE.md  pyproject.toml  render_sample_fits.py
.claude/: settings.local.json
data/catalogs/bandpasses/: f146_zero_point.yaml  roman_F146.csv
data/microlensing/: claret2000_ld.csv
docs/: git_push_commands  phase3_2_design.md  phase3_dataset_contract.md  phase3_photometry_reference.md  phase3plan.md  smig_v2_phase1_spec.docx  smig_v2_phase2_implementation_plan.md  smig_v2_phases2to6_spec.docx
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/converted/: smig_v2_phase1_spec_d6fa7396.md  smig_v2_phases2to6_spec_5787f657.md
sample_fits_output/: epoch_0_dia_64x64.fits  epoch_1_dia_64x64.fits  epoch_2_dia_64x64.fits
scripts/: test_validate_splits.py  validate_splits.py
smig/catalogs/: __init__.py  __main__.py  adapter.py  base.py  besancon.py  photometry.py  roman_bulge.py  sampler.py  synthetic.py  wcs.py
smig/config/: optics_schemas.py  roman_wfi.yaml  schemas.py  seed.py  simulation.yaml  utils.py
smig/datasets/: __init__.py  labels.py  manifest.py  schema.py  splits.py
smig/microlensing/: __init__.py  backends.py  binary.py  binding.py  errors.py  event.py  fspl.py  limb_darkening.py  priors.py  pspl.py
smig/optics/: __init__.py  psf.py
smig/provenance/: schema.py  tracker.py
smig/rendering/: __init__.py  crowding.py  dia.py  pipeline.py  source.py
smig/sensor/: __init__.py  charge_diffusion.py  detector.py  ipc.py  memory_profiler.py  nonlinearity.py  persistence.py  readout.py
(+40 files in other folders)
